// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should set the available 1`] = `
Object {
  "available": 20,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the currency position 1`] = `
Object {
  "available": 0,
  "currencyPosition": "suffix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the currency symbol 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": "$",
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has been created 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": true,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has changes 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": true,
  "isLoading": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the is loading 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": true,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the is selected 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": true,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the provider 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": false,
  "provider": "provider",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the sold 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": false,
  "provider": "",
  "sold": 20,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the ticket id 1`] = `
Object {
  "available": 0,
  "currencyPosition": "prefix",
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "isSelected": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "price": "",
    "sku": "",
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "ticketId": 1094,
}
`;
